--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,13 @@
  jobs:
    build:
      docker:
-       - image: circleci/node:8.0
+       - image: circleci/node:12.13.0
      steps:
        - checkout
-       - run: npm test
+       - run:
+          name: install
+          command: 'npm install'
+       - run:
+          name: test
+          command: 'npm test'
+      
